--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     </style>
     <link rel="stylesheet" type="text/css" href="./css/styleCJ.css" />
     <script src="JS/common.js"></script>
+	<script src="http://wechatfe.github.io/vconsole/lib/vconsole.min.js?v=3.2.0"></script>
+    <script>
+        // init vConsole
+        var vConsole = new VConsole();
+        console.log('Hello world');
+    </script>
   </head>
   <body>
     <div class="shanDeng" id="deng">
